@@ -1,7 +1,7 @@
 <html>
   <body>
     <p>
-      <p>Hello Mr. {{ firstName }} {{ lastName }}</p>
+      <p>Hello Mr. {{ firstName[0] }} {{ lastName[0] }}</p>
     </p>
   </body>
 </html>
