@@ -14,3 +14,5 @@ a ‘Content-type’ of text/html, and a message body saying ‘<h1>Hello, world
 1/29/2014:  Updated server.py so that there are forms and submissions.  Cleaned up some of the code.
 
 2/6/2014:  Got templating to work as well as arbitrary size requests.  Did not get FieldStorage to work.  Not sure how to do yet.
+
+2/6/2014 v2:  Got things working by stealing code (couldn't figure out the first part of the hw)...no shame.
